--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-backend",
   "version": "1.0.0",
   "engines": {
-    "node": "14.16.1"
+    "node": "^14.16.1"
   },
   "description": "",
   "main": "index.js",
