--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.15",
     "multer": "^1.4.4",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "./routes/userRoutes": "latest"
   }
 }
