--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "portfolio-backend",
   "version": "1.0.0",
   "engines": {
-    "node": "18.12.1"
+    "node": "14.16.1"
   },
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
